[package]
name = "bevy_replicon_attributes"
description = "Extends bevy_replicon with attribute-based visibility control"
authors = ["koe <ukoe@protonmail.com>"]
version = "0.0.1"
edition = "2021"
keywords = ["gamedev", "networking", "ecs", "visibility", "interest-management"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/UkoeHB/bevy_replicon_attributes"

[workspace]
members = [
    "bevy_replicon_attributes_derive",
]

[lib]
path = "src/lib.rs"
doctest = false
test = false

[[test]]
name = "tests"
path = "tests/test/mod.rs"
doctest = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bevy           = { version = "0.12", default-features = false }
bevy_replicon  = { version = "0.20" }
siphasher      = { version = "1.0" }
smallvec       = { version = "1.12" }
tracing        = { version = "0.1" }

bevy_replicon_attributes_derive = { path = "bevy_replicon_attributes_derive", version = "0.1.0" }

[patch.crates-io]
bevy_replicon  = { git = "https://github.com/projectharmonia/bevy_replicon", rev = "9b50915" }

[dev-dependencies]
bevy_kot_ecs         = { version = "0.11" }
bevy_renet           = { version = "0.0.10", features = ["serde"] }
#bevy_replicon_repair = { version = "0.3" }
bevy_replicon_repair = { git = "https://github.com/UkoeHB/bevy_replicon_repair", rev = "f4e988e" }
serde                = { version = "1.0" }
tracing-subscriber   = { version = "0.3" }
